cache busting and plugins

--- a/src/main.scss
+++ b/src/main.scss
@@ -3,5 +3,5 @@ $danger: rgb(142, 96, 9);
 @import "~bootstrap/scss/bootstrap";
 body {
     background-color: black;
-    color: yellow;
+    color: red;
 }
