--- a/src/main.scss
+++ b/src/main.scss
@@ -3,5 +3,5 @@ $danger: rgb(142, 96, 9);
 @import "~bootstrap/scss/bootstrap";
 body {
     background-color: black;
-    color: red;
+    color: rgb(31, 128, 58);
 }
